--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'junit:junit:4.13.2'
+
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'org.la4j:la4j:0.6.0'
     implementation 'io.reactivex:rxjava:1.3.8'
@@ -19,6 +20,8 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.9'
     testImplementation 'ch.qos.logback:logback-classic:1.4.11'
     compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
 
 }
 
